<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RotoRoute</string>
    <string name="hello_world">Login activity goes here</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_select_destination">Select Destination</string>
    <string name="destination_hint">Destination</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="title_activity_map">Map Overview</string>
    <string name="request">Request</string>
    <string name="title_activity_loading">RotoRoute</string>
    <string name="loading_text">Loading...</string>
    <string name="button_student">Student/Staff</string>
    <string name="button_guest">Guest</string>
    <string name="title_activity_enroute">RotoRoute</string>
    <string name="finished">You have reached your destination!</string>
    <string name="toc">I agree to the Terms and Conditions</string>
    <string name="title_activity_terms">Terms And Conditions</string>
    <string name="title_rate">Rate Your Experience</string>
    <string name="terms_title">Terms And Conditions</string>
    <string name="map_button">Update</string>
    <string name="terms_text">By selecting this checkbox and moving forward, you agree to the following Terms and Conditions.
    \n\nYou agree that all information entered is accurate and up to date.
    \n\nAny damage to the quadcopter will be detected throughout trips. Any new damage will be assessed to determine what
        and if any responsibility lies with the current user. All repairs for damage attributed to a user must be paid in full by the user.
    \n\nNotice: RotoRoute\'s quadcopter is outfitted with a death ray that will occasionally malfunction and destroy the user. Use service at own risk.</string>

    <string-array name="building_code_array">
        <item>AVW</item>
        <item>SSU</item>
        <item>AGY</item>
        <item>ANS</item>
        <item>ANA</item>
        <item>ARC</item>
        <item>ASY</item>
        <item>BAL</item>
        <item>BEL</item>
        <item>EDU</item>
        <item>BPS</item>
    </string-array>
    <string-array name="building_name_array">
        <item>A.V. Williams</item>
        <item>Adele H. Stamp Student Union</item>
        <item>Allegany Hall</item>
        <item>Animal Science/Agricultural Engineering</item>
        <item>Anne Arundel Hall</item>
        <item>Architecture Building</item>
        <item>ASY</item>
        <item>BAL</item>
        <item>BEL</item>
        <item>EDU</item>
        <item>BPS</item>
    </string-array>

    <string name="help_credentials_student">Please enter your UID.</string>
    <string name="help_credentials_guest">Please enter your Driver\'s License Number and select its state.</string>
    <string name="button_submit">Next</string>
    <string name="help_rating">Please rate your trip and list any comments you have about it.</string>
    <string name="title_activity_user_credential">User Credentials</string>

    <string-array name="state_abbrv">
        <item> AL </item>
        <item> AK </item>
        <item> AZ </item>
        <item> AR </item>
        <item> CA </item>
        <item> CO </item>
        <item> CT </item>
        <item> DE </item>
        <item> FL </item>
        <item> GA </item>
        <item> HI </item>
        <item> ID </item>
        <item> IL </item>
        <item> IN </item>
        <item> IA </item>
        <item> KS </item>
        <item> KY </item>
        <item> LA </item>
        <item> ME </item>
        <item> MD </item>
        <item> MA </item>
        <item> MI </item>
        <item> MN </item>
        <item> MS </item>
        <item> MO </item>
        <item> MT </item>
        <item> NE </item>
        <item> NV </item>
        <item> NH </item>
        <item> NJ </item>
        <item> NM </item>
        <item> NY </item>
        <item> NC </item>
        <item> ND </item>
        <item> OH </item>
        <item> OK </item>
        <item> OR </item>
        <item> PA </item>
        <item> RI </item>
        <item> SC </item>
        <item> SD </item>
        <item> TN </item>
        <item> TX </item>
        <item> UT </item>
        <item> VT </item>
        <item> VA </item>
        <item> WA </item>
        <item> WV </item>
        <item> WI </item>
        <item> WY </item>
    </string-array>
    <string-array name="locations">
        <item> CSIC </item>
        <item> MCK </item>
        <item> STM </item>
        <item> TAP </item>
    </string-array>

    <string name="title_activity_launcher">Launcher</string>
    <string name="cancel">Cancel</string>
    <string name="test">Select your state</string>

</resources>
