<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#00BBFF"
    tools:context="com.example.flyboyz.rotoroute.TermsActivity">

    <TextView
        android:id="@+id/termsTitle"
        android:text="@string/terms_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/termsTitle"
        android:layout_marginTop="20dp"
        android:layout_above="@+id/tocBack"
        android:layout_marginBottom="20dp"
        android:background="@drawable/scrollbounds"
        >

        <TextView
            android:id="@+id/terms"
            android:text="@string/terms_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="#000000"
            />
    </ScrollView>

    <Button
        android:id="@+id/tocBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"

        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_button"
        android:text="@string/back"
        android:onClick="back"
        android:enabled="true"/>

</RelativeLayout>
