<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#00BBFF"
    tools:context="com.example.rotoroute.MainActivity" >

    <TextView
        android:id="@+id/help_credentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <Spinner
        android:id="@+id/spinner_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/help_credentials"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignRight="@id/editText1"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:spinnerMode="dropdown"
        android:prompt="@string/test"
        android:background="#eeeeee"
        />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_state"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:background="@drawable/rounded_textview"
        android:ems="10"
        android:textSize="20dp">

        <requestFocus />
    </EditText>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toc"
        android:textColor="#FFFFFF"
        android:id="@+id/termsCheckbox"
        android:layout_alignLeft="@id/editText1"
        android:layout_below="@id/editText1"
        android:textSize="14dp"
        android:layout_marginTop="10dp"
        android:onClick="boxClicked"/>

    <Button
        android:id="@+id/button_submit_credentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editText1"
        android:layout_below="@+id/termsCheckbox"
        android:layout_marginTop="10dp"
        android:text="@string/button_submit"
        android:textColor="#000000"
        android:textSize="20dp"
        android:background="@drawable/buttonselector"
        android:visibility="invisible"/>


</RelativeLayout>


    <!--android:layout_alignParentLeft="true"-->